manifests/radarr.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: radarr
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr-auth
  namespace: radarr
  labels:
    app: radarr-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr-auth
  template:
    metadata:
      labels:
        app: radarr-auth
    spec:
      containers:
      - args:
        - --cookie-secure=false
        - --provider=oidc
        - --provider-display-name=Auth0
        - --upstream=http://inlets.inlets.svc.cluster.local
        - --http-address=$(HOST_IP):8080
        - --redirect-url=https://radarr.cluster.fun/oauth2/callback
        - --email-domain=*
        - --pass-basic-auth=false
        - --pass-access-token=false
        - --oidc-issuer-url=https://marcusnoble.eu.auth0.com/
        - --cookie-secret=KDGD6rrK6cBmryyZ4wcJ9xAUNW9AQN
        image: quay.io/oauth2-proxy/oauth2-proxy:v5.1.1
        name: oauth-proxy
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            memory: 50Mi
          requests:
            memory: 50Mi
---
apiVersion: v1
kind: Service
metadata:
  name: radarr-auth
  namespace: radarr
  labels:
    app: radarr-auth
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: radarr-auth
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: radarr-auth
  namespace: radarr
  labels:
    app: radarr-auth
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  tls:
  - hosts:
    - radarr.cluster.fun
    secretName: radarr-ingress
  rules:
  - host: radarr.cluster.fun
    http:
      paths:
      - path: /
        backend:
          serviceName: radarr-auth
          servicePort: 80
